# hydramp

./: .gitignore  LICENSE  README.md  data.dvc  get_data.sh  models.dvc  requirements.txt  results.dvc  run_unconstrained_generation.sh  setup.py  wheels.dvc
.dvc/: config
amp/: .gitattributes  config.py
amp/data_utils/: csv.py  data_loader.py  data_loader_single_file.py  download.py  fasta.py  sequence.py
amp/evaluation/: config.py
amp/inference/: __init__.py  filtering.py  inference.py  predict_if_amp.py
amp/layers/: autoregressive_gru.py  gumbel_softmax.py  vae_loss.py
amp/models/: model.py  model_garden.py
amp/utils/: basic_model_serializer.py  callback.py  classifier_utils.py  dict_model_layer_collection.py  generate_peptides.py  generator.py  metrics.py  phys_chem_propterties.py  seed.py
data_setup/: .pdm-python  README.md  download_data.py  pyproject.toml
scripts/: amp_classifier_training_procedure.ipynb  basic_training_procedure.ipynb  dataset_preparation.ipynb  hydra_training_procedure.ipynb  mic_classifier_training_prodecure.ipynb  model_selection.ipynb  pepcvae_training_procedure.ipynb  supp_fig1.ipynb  unconstrained_generation.ipynb  z_sigma_improvement.ipynb
scripts/dbaasp/: dbaasp.sh  dbaasp_clean.fasta  dbaasp_parsing.ipynb  high_ecoli_activity.fasta  high_saureus_activity.fasta  low_ecoli_activity.fasta  low_saureus_activity.fasta
scripts/figures/: AnalogueGeneration_Conditions.ipynb  AnalogueGeneration_Counts.ipynb  AnalogueGeneration_PhysiochcemicalProperties.ipynb  AnalogueGeneration_SuppConditions.ipynb  Length.ipynb  figure2.ipynb  (+5 more)
(+18 files in other folders)
